--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="reset" href="assets/reset.css">
+    <link rel="normalize" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/stylesheet.css">
     <title>Team High Roll</title>
     <link rel="favicon" type="image/jpg" href="images/IMG_1096.JPG"/>
 </head>
