adding in background photo and initial elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,29 @@
     <link rel="normalize" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/stylesheet.css">
     <title>Team High Roll</title>
-    <link rel="favicon" type="image/jpg" href="images/IMG_1096.JPG"/>
+    <link rel="favicon" type="image/jpg" href="images/IMG_1096.JPG" />
 </head>
+
 <body>
-    <h1>Coming Soon!</h1>
-    <img src="images/IMG_1096.JPG" alt="THR Logo">
-    
+    <header class="page-header">
+        <H1 class="nav-name">Team High Roll</H1>
+        <div>
+            <!-- list of navigation bar items -->
+            <ul class=navbar>
+                <li class="navitem active"><a href="index.html">Home</a></li>
+                <li class="navitem"><a href="#">Roster</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <article class="landing-main">
+        <div class="group-phtot">
+            <img rel="group-photo" src="images/Team Photo 1.jpg" alt="group photo">
+        </div>
+
+
+    </article>
+
 </body>
+
 </html>
