--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <img rel="group-photo" src="images/Team Photo 1.jpg" alt="group photo">
         </div>
 
+        <p>
+            Team High Roll is a small Magic The Gathering team and friend group based in Austin Texas with a handful of member in other states.
+        </p>
+
 
     </article>
 
