adding in additional nav tab

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <!-- list of navigation bar items -->
             <ul class=navbar>
                 <li class="navitem active"><a href="index.html">Home</a></li>
-                <li class="navitem"><a href="#">Roster</a></li>
+                <li class="navitem"><a href="#">About Us</a></li>
+                <li class="navitem"><a href="#">Content</a></li>
             </ul>
         </div>
     </header>
