adding in nav element and removing ul

--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 <body>
     <header class="page-header">
         <H1 class="nav-name">Team High Roll</H1>
-        <div>
+        <nav class=navbar>
             <!-- list of navigation bar items -->
-            <ul class=navbar>
-                <li class="navitem active"><a href="index.html">Home</a></li>
-                <li class="navitem"><a href="#">About Us</a></li>
-                <li class="navitem"><a href="#">Content</a></li>
-            </ul>
-        </div>
+            <a class="navitem active" href="index.html">Home</a>
+            <a class="navitem" href="#">About Us</a>
+            <a class="navitem" href="#">Content</a>
+        </nav>
     </header>
 
     <article class="landing-main">
