adding in more stylings

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <article class="landing-main">
-        <div class="group-phtot">
+        <div class="group-photo">
             <img rel="group-photo" src="images/Team Photo 1.jpg" alt="group photo">
         </div>
 
