adding more styling and placement features

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img rel="group-photo" src="images/Team Photo 1.jpg" alt="group photo">
         </div>
 
-        <p>
+        <p id="landing-info">  
             Team High Roll is a small Magic The Gathering team and friend group based in Austin Texas with a handful of member in other states.
         </p>
 
