creating new pages and adding default placeholder as well as linking pages. all further changes will be done in individual branches

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -17,24 +17,17 @@
         <H1 class="nav-name">Team High Roll</H1>
         <nav class=navbar>
             <!-- list of navigation bar items -->
-            <a class="navitem active" href="index.html">Home</a>
-            <a class="navitem" href="Pages/about.html">About Us</a>
-            <a class="navitem" href="Pages/content.html">Content</a>
+            <a class="navitem" href="/index.html">Home</a>
+            <a class="navitem" href="about.html">About Us</a>
+            <a class="navitem active" href="content.html">Content</a>
         </nav>
     </header>
 
-    <article class="landing-main">
-        <div class="group-photo">
-            <img rel="group-photo" src="images/Team Photo 1.jpg" alt="group photo">
-        </div>
 
-        <p id="landing-info">
-            Team High Roll is a small Magic The Gathering team and friend group based in Austin Texas with a handful of
-            member in other states.
-        </p>
+    <h1>Coming Soon!</h1>
+    <img src="images/IMG_1096.JPG" alt="THR Logo">
 
 
-    </article>
 
 </body>
 
