--- a/Pages/about.html
+++ b/Pages/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="reset" href="assets/reset.css">
-    <link rel="normalize" href="assets/normalize.css">
-    <link rel="stylesheet" href="assets/stylesheet.css">
+    <link rel="reset" href="/assets/reset.css">
+    <link rel="normalize" href="/assets/normalize.css">
+    <link rel="stylesheet" href="/assets/stylesheet.css">
     <title>Team High Roll</title>
     <link rel="favicon" type="image/jpg" href="images/IMG_1096.JPG" />
 </head>
@@ -24,8 +24,8 @@
     </header>
 
 
-    <h1>Coming Soon!</h1>
-    <img src="images/IMG_1096.JPG" alt="THR Logo">
+    <h1 style="color:black">Coming Soon!</h1>
+    <img src="/images/IMG_1096.JPG" alt="THR Logo">
 
 
 
