adding in content page structure, stylings, photos, and media queries that will need adjustment

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -24,8 +24,36 @@
     </header>
 
 
-    <h1 style="color:black">Coming Soon!</h1>
-    <img src="/images/IMG_1096.JPG" alt="THR Logo">
+    <!-- content area -->
+    <section class="content-area">
+
+        <div class="content">
+
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1234724350">
+                <img class="content-photos" src="/images/Urza-Lord.jpg" alt="Urza-Lord">
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Streaming Some Thopter Sword!</h>
+                    <p class="photo-caption-p">12/15/2021</p>
+                </div>
+            </a>
+
+            <a class="content-box-items" href="https://www.twitch.tv/videos/1204127208">
+                <img class="content-photos" src="/images/amulet-of-vigor.png" alt="amulet-of-vigor">
+                <div class="bottom-left">
+                    <h class="photo-caption-h">Amulet Titan Stream :)</h>
+                    <p class="photo-caption-p">11/13/2021</p>
+                </div>
+            </a>
+
+            <!-- <a class="content-box-items" href="#">
+                    <img class="content-photos" src="/Images/photo" alt="photo name">
+                    <div class="bottom-left">
+                        <h class="photo-caption-h">Stream Name</h>
+                        <p class="photo-caption-p">Date</p>
+                    </div>
+                </a> -->
+        </div>
+    </section>
 
 
 
