adding in favicon and linking correctly

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="normalize" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/stylesheet.css">
     <title>Team High Roll</title>
-    <link rel="favicon" type="image/jpg" href="images/IMG_1096.JPG" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 
 <body>
