--- a/Pages/content.html
+++ b/Pages/content.html
@@ -9,7 +9,7 @@
     <link rel="normalize" href="/assets/normalize.css">
     <link rel="stylesheet" href="/assets/stylesheet.css">
     <title>Team High Roll</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/jpg" href="/images/IMG_1096.JPG"/>
 </head>
 
 <body>
