adding in media queries

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -23,9 +23,10 @@
         </nav>
     </header>
 
-
+<a href="/index.html">
     <h1 style="color:black">Coming Soon!</h1>
     <img src="/images/IMG_1096.JPG" alt="THR Logo">
+</a>
 
 
 
