creating base structure of block element. styling to follow

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -9,7 +9,7 @@
     <link rel="normalize" href="/assets/normalize.css">
     <link rel="stylesheet" href="/assets/stylesheet.css">
     <title>Team High Roll</title>
-    <link rel="icon" type="image/jpg" href="/images/IMG_1096.JPG"/>
+    <link rel="icon" type="image/jpg" href="/images/IMG_1096.JPG" />
 </head>
 
 <body>
@@ -23,11 +23,30 @@
         </nav>
     </header>
 
-<a href="/index.html">
-    <h1 style="color:black">Coming Soon!</h1>
-    <img src="/images/IMG_1096.JPG" alt="THR Logo">
-</a>
+    <section class="team-cards">
 
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+                <div photo-info>
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <a ID="name" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <p>Formats: blah blah blah</p>
+                <p> Preferred archetype: blah blah blah</p>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+    </section>
 
 
 </body>
