card initial structure made, now to clean it up a bit

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -28,7 +28,7 @@
         <div class="card">
             <div class=card-photo>
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-                <div photo-info>
+                <div class="bottom-left">
                     <h>Name</h>
                     <p>identity</p>
                 </div>
