populated additional cards

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -50,6 +50,207 @@
             </div>
         </div>
 
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <!-- hidden template for card -->
+        <!-- <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div> -->
+
     </section>
 
 
