adding in more cards and restructing card spacing

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -44,30 +44,7 @@
                 <br>
                 <p>Formats: blah blah blah</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
+                <p>Favorite Format: blah blah blah</p>
                 <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
@@ -94,30 +71,7 @@
                 <br>
                 <p>Formats: blah blah blah</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
+                <p>Favorite Format: blah blah blah</p>
                 <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
@@ -144,30 +98,7 @@
                 <br>
                 <p>Formats: blah blah blah</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
-                <br>
-                <p> Anything else?: blah blah blah</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class=card-photo>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
-
-                <a ID="name" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
-
-                <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
-                </div>
-            </div>
-
-            <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
-                <br>
-                <p>Formats: blah blah blah</p>
+                <p>Favorite Format: blah blah blah</p>
                 <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
@@ -194,6 +125,8 @@
                 <br>
                 <p>Formats: blah blah blah</p>
                 <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
                 <p> Anything else?: blah blah blah</p>
@@ -218,6 +151,143 @@
                 <p>Titles: Blah Blah Blah</p>
                 <br>
                 <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
+                <br>
+                <p> Preferred archetype: blah blah blah</p>
+                <br>
+                <p> Anything else?: blah blah blah</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class=card-photo>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
+
+                <a ID="name" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
+
+                <div class="bottom-left">
+                    <h>Name</h>
+                    <p>identity</p>
+                </div>
+            </div>
+
+            <div class="member-info">
+                <p>Titles: Blah Blah Blah</p>
+                <br>
+                <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
                 <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
@@ -244,6 +314,8 @@
                 <p>Titles: Blah Blah Blah</p>
                 <br>
                 <p>Formats: blah blah blah</p>
+                <br>
+                <p>Favorite Format: blah blah blah</p>
                 <br>
                 <p> Preferred archetype: blah blah blah</p>
                 <br>
