adding in photocaption classes for stylesheet

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -34,8 +34,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -61,8 +61,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -88,8 +88,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -115,8 +115,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -142,8 +142,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -169,8 +169,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -196,8 +196,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -223,8 +223,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -250,8 +250,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -277,8 +277,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
@@ -305,8 +305,8 @@
                 </a>
 
                 <div class="bottom-left">
-                    <h>Name</h>
-                    <p>identity</p>
+                    <h class="photo-caption-h">Name</h>
+                    <p class="photo-caption-p">identity</p>
                 </div>
             </div>
 
